<resources>
    <string name="app_name">Doughnuts</string>
    <string name="splash_message">Food is Love</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register_message"><u>Not a foodie yet? Join now!</u></string>
    <string name="auth_failed">Sign in failed because</string>
    <string name="email_needed">I need your email!</string>
    <string name="password_needed">I need your password to let you in!</string>
    <string name="invalid_email">That doens\'t look like an email address to me!</string>
    <string name="email_hint">Email</string>
    <string name="activity_login_label">Sign in</string>
    <string name="activity_register_label">Sign up</string>
    <string name="password_hint">Password</string>
    <string name="help_button">Help</string>
    <string name="sign_in_button">Sign In</string>
    <string name="user_name_hint">Pick a username</string>
    <string name="confirm_your_password_hint">Confirm your password</string>
    <string name="sign_up_button">Sign Up</string>

    <style name="storage_url">gs://doughnuts-17303.appspot.com</style>

    <string name="title_activity_recipe_wizard">New Recipe</string>
    <string name="title_activity_recipe_activity_wizard">RecipeActivityWizard</string>
    <string name="display_picture">Display Picture</string>
    <string name="recipe_name_hint">Pick a name for your dish</string>
    <string name="contingency_error">Something went wrong</string>
</resources>
