<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.frostox.doughnuts.activities.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_register_app_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/activity_register_uname"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_register_uname"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/user_name_hint"
        android:inputType="text"
        android:lines="1"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_register_email"
        android:layout_alignParentStart="true"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_below="@+id/activity_register_uname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/activity_register_password"
        android:layout_below="@+id/activity_register_email"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/activity_register_email"
        android:hint="@string/password_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/activity_register_repassword"
        android:layout_below="@+id/activity_register_password"
        android:hint="@string/confirm_your_password_hint"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:id="@+id/activity_register_sign_up"
        android:layout_alignParentBottom="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignParentEnd="true"
        android:onClick="register"/>

</RelativeLayout>
